--- a/index.html
+++ b/index.html
@@ -16,7 +16,50 @@
             <img src="img\pexels-bill-emrich-230794-2.jpg" alt="">
         </section>
     </header>
+    <!-- /header -->
     <hr>
-    
+    <!-- Main -->
+    <main>
+        <section>
+            <h2>Le mie spese</h2>
+            <table>
+                <!-- instetstazione tabella -->
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione </th>
+                        <th>Costo</th>
+                    </tr>
+                </thead>
+                <!-- fine instestazione tabella -->
+
+                <!-- Corpo tabella -->
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto aereo</td>
+                        <td>120$</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120$</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglieto Aereo</td>
+                        <td>120$</td>
+                    </tr>
+                    <tr>
+                        <td>Totale</td>
+                        <td></td>
+                        <td>360$</td>
+                    </tr>
+                </tbody>
+            </table>
+            <!-- fine tabella -->
+        </section>
+    </main>
+
 </body>
 </html>
