add and finish list

--- a/index.html
+++ b/index.html
@@ -59,6 +59,18 @@
             </table>
             <!-- fine tabella -->
         </section>
+        <!-- add new section lista -->
+            <section>
+                <hr>
+                <h2>Cose da fare</h2>
+                    <ul>
+                      <li>Visitare la Tower of London &cross;;</li> 
+                      <li>Visitare Greenwich &check;</li>
+                      <li>ascoltare un artista di strada a Covent Garden &check;</li>
+                      <li>Mangiare il tipico Fish and Hips inglese &cross; </li>
+                    </ul>
+            </section>
+            <!-- finised list  -->
     </main>
 
 </body>
