--- a/index.html
+++ b/index.html
@@ -71,7 +71,36 @@
                     </ul>
             </section>
             <!-- finised list  -->
-    </main>
+            <section>
+                <!-- last part of main -->
+                <hr>
+                <h2>Info utili</h2>
+                   <ol>
+                    <li>Numeri per le emergenze </li>
+                    <ul>
+                        <li><strong>999</strong>- Emergenza </li>
+                        <li><strong>101</strong>- Numero di polizia</li>
+                        <li><strong>111</strong> - Numero assistenza medica</li>
+                    </ul>
+                   </ol>
+                     <ol>
+                        <li>Hotel</li>
+                         <ul>
+                            <li><strong>Nome Hotel</strong>: Bukingam Palace </li>
+                            <li><strong>Indirizzo hotel</strong>: Westminster,London SW1A 1AA, Regno Unito </li>
+                        </ul>
+                    </ol>
+                        <ol>
+                            <li>Aereo</li>
+                            <ul>
+                                <li><strong>Volo Andata </strong>: Y1234X, ore 9:30 da Milano Malpensa</li>
+                                <li><strong>Volo Ritorno </strong>:Y1236X, ore 18:30 da London Meathrow</li>
+                    
+                            </ul>
+                        </ol>
 
+            </section>
+    </main>
+<!-- finish main -->
 </body>
 </html>
