finish footer and work

--- a/index.html
+++ b/index.html
@@ -102,5 +102,19 @@
             </section>
     </main>
 <!-- finish main -->
+
+
+    <!-- footer -->
+    <footer>
+        <hr>
+            <h2>Le Foto</h2>
+                <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="bridge">
+                <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/400x400_23.png?itok=isZyMHmq
+                " alt="airplane travel">
+
+
+    </footer>
+<!-- /footer -->
+
 </body>
 </html>
