--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
     <!-- header -->
     <header>
         <h1>Il mio Viaggio a Londra </h1>
-        <section>
-            <img src="img\pexels-bill-emrich-230794-0.jpg" alt="">
-            <img src="img\pexels-bill-emrich-230794-1.jpg" alt="">
-            <img src="img\pexels-bill-emrich-230794-2.jpg" alt="">
-        </section>
+        <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
+        <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
+        <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
     </header>
     <!-- /header -->
     <hr>
