--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <!-- header -->
     <header>
         <h1>Il mio Viaggio a Londra </h1>
-        <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
-        <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
-        <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
+        <div>
+            <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
+            <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
+            <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
+        </div>
     </header>
     <!-- /header -->
     <hr>
@@ -48,19 +50,20 @@
                         <td>Biglieto Aereo</td>
                         <td>120$</td>
                     </tr>
+                </tbody>
+                <tfoot>
                     <tr>
-                        <td>Totale</td>
-                        <td></td>
+                        <td colspan="2">Totale</td>
                         <td>360$</td>
                     </tr>
-                </tbody>
+                </tfoot>
             </table>
             <!-- fine tabella -->
         </section>
         <!-- add new section lista -->
             <section>
                 <hr>
-                <h2>Cose da fare</h2>
+                <h3>Cose da fare</h3>
                     <ul>
                       <li>Visitare la Tower of London &cross;;</li> 
                       <li>Visitare Greenwich &check;</li>
@@ -72,7 +75,7 @@
             <section>
                 <!-- last part of main -->
                 <hr>
-                <h2>Info utili</h2>
+                <h3>Info utili</h3>
                    <ol>
                     <li>Numeri per le emergenze </li>
                     <ul>
@@ -116,3 +119,4 @@
 
 </body>
 </html>
+
